Fixed z-index bug with glyph names

--- a/web/src/scss/glyph-item.scss
+++ b/web/src/scss/glyph-item.scss
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     font-family: var(--vscode-font-family, var(--theme-font-family));
-    font-size: 12px;
+    font-size: 13px;
     padding: 8px 6px;
     border-top: 1px solid;
     transform: translateY(calc(100% + 1px));
