--- a/web/src/scss/tab-view.scss
+++ b/web/src/scss/tab-view.scss
@@ -4,7 +4,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    z-index: 2;
+    z-index: 5;
     position: sticky;
     top: 0;
     left: 0;
